# gweta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  gweta.md  mkdocs.yml  pyproject.toml  rag.md
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  getting-started.md  index.md
docs/api/: reference.md
docs/concepts/: architecture.md
docs/design/: ARCHITECTURE_DECISIONS.md  PHASE_1_SIMUKA.md
docs/examples/: full-pipeline.md
docs/guides/: integration.md  intelligence.md
examples/: basic_chunking.py  basic_crawl.py  basic_validation.py  career_platform_pipeline.py  domain_rules.py  full_pipeline.py  intelligent_scouting.py  intent_aware_ingestion.py  mcp_usage.py  pdf_extraction.py
examples/intents/: simuka.yaml
examples/rag_service/: README.md  main.py  rag_engine.py
examples/rag_service/data/: sample.json
examples/rules/: zimbabwe_business.yaml  zimbabwe_career.yaml
src/gweta/: __init__.py  _version.py
src/gweta/acquire/: __init__.py  api.py  crawler.py  database.py  pdf.py
src/gweta/acquire/fetchers/: __init__.py  rss.py  sitemap.py  url.py
src/gweta/adapters/: __init__.py  chonkie.py  langchain.py  llamaindex.py
src/gweta/cli/: __init__.py  main.py
src/gweta/core/: __init__.py  config.py  exceptions.py  logging.py  registry.py  types.py
src/gweta/ingest/: __init__.py  chunkers.py  pipeline.py
src/gweta/ingest/stores/: __init__.py  base.py  chroma.py  pinecone.py  qdrant.py  weaviate.py
src/gweta/intelligence/: __init__.py  embeddings.py  intent.py  llm.py  pipeline.py  relevance.py  scout.py
src/gweta/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/gweta/validate/: __init__.py  chunks.py  extraction.py  golden.py  health.py  rules.py
src/gweta/validate/detectors/: __init__.py  coherence.py  density.py  duplicates.py  gibberish.py  staleness.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_acquire.py  test_config.py  test_golden.py  test_intelligence.py  test_mcp.py  test_rules.py  test_stores.py  test_types.py  test_validators.py
